--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,11 @@ body {
   margin: 0;
 }
 
+img, embed,
+object, video {
+  max-width: 100%
+}
+
 .nav ul {
     list-style-type: none;
     margin: 0;
@@ -112,6 +117,7 @@ body {
 }
 
 .img1 {
+  max-width: 100%;
   margin-right: 27.5px;
   margin-top: 80px;
   margin-bottom: 80px;
@@ -119,6 +125,7 @@ body {
 }
 
 .img2 {
+  max-width: 100%;
   margin-left: 27.5px;
   margin-right: 27.5px;
   margin-top: 80px;
@@ -127,6 +134,7 @@ body {
 }
 
 .img3 {
+  max-width: 100%;
   margin-left: 27.5px;
   margin-top: 80px;
   margin-bottom: 80px;
@@ -196,6 +204,10 @@ body {
 
 .contact a {
   color: #f26522;
+}
+
+.tab {
+  text-indent: 75px;
 }
 
 .map {
