--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,8 @@ body {
     background-color: #ffffff;
 }
 
-.nav h1 {
+.nav li h1 {
+  float: left;
   font-size: 1.5em;
   color: #323232;
   font-family: PT Sans Narrow;
@@ -165,7 +166,6 @@ body {
 .business {
   background-color: #ffffff;
   height: 190px;
-  width: 250px;
   margin-right: 30px;
   margin-bottom: 80px;
   padding: 30px;
@@ -191,7 +191,6 @@ body {
 .contact {
   background-color: #ffffff;
   height: 190px;
-  width: 250px;
   margin-left: 30px;
   margin-bottom: 80px;
   padding: 30px;
@@ -228,12 +227,17 @@ body {
 }
 
 .footer {
-  color: #ffffff;
+  padding-top: 1px;
+  padding-bottom: 1px;
   background-color: #00897f;
+
+}
+
+.footer h1 {
   font-family: PT Sans Narrow;
+  font-weight: bold;
   font-size: 1.25em;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  color: #323232;
 }
 
 /* On devices wider than 660px */
@@ -304,22 +308,32 @@ body {
    background-color: #eeeeee;
 }
 
+.business h3 {
+  width: 250px;
+  margin: auto;
+}
+
 .contact {
    display: block;
    margin: auto;
    background-color:  #eeeeee;
  }
 
+.contact h3 {
+  width: 250px;
+  margin: auto;
+}
+
 .map {
   display: block;
-  width: 310px;
-  height: 100px;
+  width: 100%;
+  height: 250px;
   margin: auto;
 }
 
 .footer {
   display: block;
-  width: 310px;
+  width: 100%;
   margin: auto;
  }
 }
